fixed stretching containers on care.html

--- a/style.css
+++ b/style.css
@@ -11,13 +11,12 @@ background: #f9e4ea;
 background-image: url("images/b.jpg");
 background-repeat: no-repeat;
 background-size: cover;
-
 }
 .care-page{
 background: #f9e4ea;
 background-image: url("images/mn.jpg");
 background-repeat: repeat;
-background-size: 1515px;}
+}
 
  .h1{
     margin-top: 50px;
@@ -38,7 +37,7 @@ h1{
 }
 
 h3{
-    margin-top: 420px;
+    /* margin-top: 420px; fixed-size */
     font-size: 35px;
     font-weight: 100%;
     color: white;
@@ -48,7 +47,7 @@ h3{
 .my-box{
     width: 1400px;         
     display: flex;
-    height: 395px;              
+    /* height: 395px; fixed-size*/ 
     background-color: rgb(247, 186, 196);
     border: 2px solid rgb(241, 189, 197);    
     border-radius: 30px;  
@@ -73,8 +72,6 @@ h3{
 .button-group{
      display: flex;   
      margin-top: 1rem;
-
-
 }
 .button-group button{
     background-color: rgb(243, 132, 150);
@@ -128,7 +125,6 @@ h3{
     color: white;
     font-size: 12px;
     font-weight: bold;
-    
 }
 
 h1{
@@ -206,10 +202,11 @@ text-align:center;
 
 
 .container{
-padding:40px;
-max-width:1500px;
+padding: 40px;
+/* max-width:1500px;
+max-width: fit-content;
 margin:auto;
-color: white;
+color: white; */
 }
 
 
@@ -262,8 +259,8 @@ transition:transform 0.2s;
 }
 
 .breed-card h3{
-        color: #f67199;
-        font-weight: bold;
+    color: #f67199;
+    font-weight: bold;
 }
 
 .breed-card:hover{
@@ -286,12 +283,9 @@ border-radius:9px;
 }
 
 
-
-.care-grid{
-display:grid    ;
-grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-gap:20px;
-
+#care-grid{
+    display: flex;
+    max-height: fit-content;
 }
 
 .care-box{
@@ -301,23 +295,30 @@ border-left:5px solid #f67199;
 color: #f67199;
 border-radius: 20px;
 text-align: left;
- background-image: url("images/z.jpg");
-    background-size: cover;
-    background-position: center; 
-    justify-content: center;
+background-image: url("images/z.jpg");
+background-size: cover;
+background-position: center; 
+justify-content: center;
 }
 
 .boxe{
 padding:10px;
 border-radius: 10px;
 text-align: left;
-height: 400px;
+/* height: 400px; */
+max-width: 400px;
+display: block;
 margin-top: 20px;
 margin-left: 12px;
 margin-right: 12px;
 background-image: url("images/qw.jpg");
 background-repeat: no-repeat;
 background-size: cover;
+}
+
+.boxe > img{
+    border-radius: .5rem;
+    max-width: 100%;
 }
 
 .care-box h3{
